--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
                     </div>
             </section>
         </main>
+        
+        <footer class="footer-copyright">
+            <p>&copy; 2026 Yuranis Botto Jiménez.</p>
+        </footer>
     </div>
 
 </body>
-    <footer>
-        <p> © 2026 - Yuranis Botto</p>
-    </footer>
 </html>
